# lingo-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: generated.rs  lib.rs  lib.tpl.rs  main.rs  stemmer.rs  stopwords.rs
tests/: fixtures.json
